# 3Labs

./: .gitignore  CMakeLists.txt  README.md  api.h  array.hpp  complex_number.cpp  complex_number.hpp  core.run.14402.1571034237  core.run.14552.1571034262  core.run.14724.1571034290  core.run.3619.1571030507  core.run.3771.1571030562  core.run.3950.1571030594  core.run.4100.1571030623  developer.h  employee.h  input.cpp  input.hpp  main.cpp  matrix.hpp  shapes.cpp  shapes.hpp  student.h  train.h
dev/: developer.h  frontenddeveloper.h  fullstackdeveloper.h  nativedeveloper.h  serverdeveloper.h  webdeveloper.h
ncurses/: Makefile  config.status  edit_man.sh
ncurses/c++/: Makefile  demo
ncurses/form/: Makefile
ncurses/man/: Makefile
ncurses/menu/: Makefile
ncurses/ncurses/: Makefile  make_hash  make_keys  report_offsets
ncurses/panel/: Makefile
ncurses/progs/: Makefile  clear  infocmp  tabs  tic  toe  tput  tset
ncurses/test/: Makefile  background  blue  bs  cardfile  chgat  clip_printw  color_set  demo_altkeys  demo_defkey  demo_forms  demo_keyok  demo_menus  demo_new_pair  demo_panels  demo_termcap  demo_terminfo  ditto  dots  dots_curses  dots_mvcur  dots_termcap  dots_xcurses  echochar  extended_color  filter  firework  firstlast  foldkeys  form_driver_w  gdc  hanoi  hashtest  inch_wide  inchs  ins_wide  insdelln  inserts  key_names  keynames  (+35 more)
railway/: conductor.h  driver.cpp  driver.h  engine.h  locomotive.cpp  locomotive.h  railwaycarriage.h  train.cpp  train.h
railway/conductor/: conductor.cpp  conductor.h
railway/driver/: driver.h
(+8 files in other folders)
